--- a/poe-fe/poe-fe/angular.json
+++ b/poe-fe/poe-fe/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "poe-fe": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "poe-fe"
+    }
+  },
+  "defaultProject": "poe-fe",
+  "cli": {
+    "analytics": false
+  }
 }
