Added custom highlighting for PDDL systax

--- a/poe-fe/poe-fe/angular.json
+++ b/poe-fe/poe-fe/angular.json
@@ -32,7 +32,9 @@
               "./node_modules/codemirror/lib/codemirror.css",
               "./node_modules/codemirror/theme/material.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./src/assets/codemirror/pddl-mode.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -98,7 +100,9 @@
               "./node_modules/codemirror/lib/codemirror.css",
               "./node_modules/codemirror/theme/material.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./src/assets/codemirror/pddl-mode.js"
+            ]
           }
         },
         "lint": {
