--- a/poe-fe/poe-fe/package.json
+++ b/poe-fe/poe-fe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poe-fe",
-  "version": "1.0.3",
+  "version": "1.0.3.2 (testing fix)",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
